deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: content-api-ingress
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:252078852689:certificate/330e628f-821d-4c8b-9f5c-e19141aaae87
    alb.ingress.kubernetes.io/group.name: cognianxtgen
    alb.ingress.kubernetes.io/healthcheck-path: /api
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    #alb.ingress.kubernetes.io/target-group-attributes: 'stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=604800'
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
spec:
  rules:
  - host: "contentapi.cognia.epiuseaws.com"
    http: 
      paths:
      - pathType: Exact
        path: /
        backend:
          service:
            name: content-api-service
            port:
              name: use-annotation
